--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,17 @@
             <version>RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>cglib</groupId>
@@ -66,5 +77,6 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+
     </dependencies>
 </project>
