--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,12 @@
             <version>1.1.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>taglibs</groupId>-->
             <!--<artifactId>standard</artifactId>-->
